Error de signo de < arreglado

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Federico Sosa</h1>
-    <<h2>Esta es mi web personal</h2>
+    <h2>Esta es mi web personal</h2>
   </body>
 </html>
