Agregue un poco de estilo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Mi web personal</title>
+    <style>
+      h1, h2{
+        font-family: arial;
+        font-size: 5vw;
+        text-align: center;
+      }
+      h2{
+        font-size: 2vw;
+      }
+    </style>
   </head>
   <body>
     <h1>Federico Sosa</h1>
