Agregue redes socailes y la bienvenida

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <title>Mi web personal</title>
-  </head>
-  <body>
-    <h1>Federico Sosa</h1>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Mi web personal - Federico Sosa</title>
+</head>
+<body>
+  <h1>Federico Sosa</h1>
+  <ul>
+    <li>Facebook</li>
+    <li>Twitter</li>
+    <li>YouTube</li>
+  </ul>
+  <h2>Bienvenido a mi perfil personal</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium perspiciatis, illo placeat consequuntur optio ut earum eligendi dolore vel velit aspernatur error libero autem dolores, molestiae quasi iure ipsam a.</p>
+</body>
 </html>
