Agregue skills, fijarse comentarios

--- a/index.html
+++ b/index.html
@@ -9,11 +9,53 @@
 <body>
   <h1>Federico Sosa</h1>
   <ul>
-    <li>Facebook</li>
-    <li>Twitter</li>
-    <li>YouTube</li>
+    <li><a href="facebook.com" target="_blank">Facebook</a></li>
+    <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+    <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
   </ul>
   <h2>Bienvenido a mi perfil personal</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium perspiciatis, illo placeat consequuntur optio ut earum eligendi dolore vel velit aspernatur error libero autem dolores, molestiae quasi iure ipsam a.</p>
+  <table width="50%" border="1">
+    <caption>
+      <h3>Mis Habilidades</h3>
+    </caption>
+    <thead>
+      <tr>
+        <th>Materia</th>
+        <th>Nivel de Desempeño</th>
+      </tr>
+    </thead>
+    <tfoot>
+      <tr>
+        <!-- porque la etiqueta progress tiene etiqueta de inicio y cierre -->
+        <td>Git</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+      <tr>
+        <td>JS</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+      <tr>
+        <td>PHP</td>
+        <td><progress max="100" value="90"></progress></td>
+      </tr>
+      <tr>
+        <td>BASE DE DATOS</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+      <tr>
+        <td>INGLES</td>
+        <td><progress max="100" value="100"></progress></td>
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
