--- a/index.html
+++ b/index.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mi web personal - Federico Sosa</title>
-</head>
-<body>
-  <h1>Federico Sosa</h1>
-  <ul>
-    <li><a href="facebook.com" target="_blank">Facebook</a></li>
-    <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-    <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
-  </ul>
-  <h2>Bienvenido a mi perfil personal</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium perspiciatis, illo placeat consequuntur optio ut earum eligendi dolore vel velit aspernatur error libero autem dolores, molestiae quasi iure ipsam a.</p>
-  <table width="50%" border="1">
-    <caption>
-      <h3>Mis Habilidades</h3>
-    </caption>
-    <thead>
-      <tr>
-        <th>Materia</th>
-        <th>Nivel de Desempeño</th>
-      </tr>
-    </thead>
-    <tfoot>
-      <tr>
-        <!-- porque la etiqueta progress tiene etiqueta de inicio y cierre -->
-        <td>Git</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-      <tr>
-        <td>JS</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-      <tr>
-        <td>PHP</td>
-        <td><progress max="100" value="90"></progress></td>
-      </tr>
-      <tr>
-        <td>BASE DE DATOS</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-      <tr>
-        <td>INGLES</td>
-        <td><progress max="100" value="100"></progress></td>
-      </tr>
-    </tfoot>
-  </table>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mi web personal - Federico Sosa</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="main">
+      <header>
+        <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
+        <h1>Federico Sosa</h1>
+        <ul class="links">
+          <li><a href="facebook.com" target="_blank">Autobiografía</a></li>
+          <li><a href="https://twitter.com" target="_blank">Información de contacto</a></li>
+        </ul>
+      </header>
+      <h2>Bienvenido a mi perfil personal</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus accusantium similique repudiandae hic mollitia, alias excepturi, quaerat libero, explicabo odio corporis culpa ullam facilis veritatis eum? Amet aliquid, cumque eligendi!</p>
+      <table>
+        <caption>
+          <h3>Mis Habilidades</h3>
+        </caption>
+        <thead>
+          <tr>
+            <th>Materia</th>
+            <th>Nivel de Desempeño</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <!-- porque la etiqueta progress tiene etiqueta de inicio y cierre -->
+            <td>Git</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>HTML</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>JS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>PHP</td>
+            <td><progress max="100" value="90"></progress></td>
+          </tr>
+          <tr>
+            <td>BASE DE DATOS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>INGLES</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </body>
 </html>
