--- a/index.html
+++ b/index.html
@@ -8,16 +8,28 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
       <header>
-        <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
-        <h1>Federico Sosa</h1>
-        <ul class="links">
-          <li><a href="facebook.com" target="_blank">Autobiografía</a></li>
-          <li><a href="https://twitter.com" target="_blank">Información de contacto</a></li>
-        </ul>
+        <nav>
+          <span>Federico Sosa</span>
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Skills</a>
+          <a href="">Contact</a>
+        </nav>
       </header>
-      <h2>Bienvenido a mi perfil personal</h2>
+
+      <section class="box-info">
+        <aside class="profile">
+          <section class="profile-pic">
+            <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
+          </section>
+          <section class="profile-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </section>
+        </aside>
+      </section>
+
+      <!-- <h2>Bienvenido a mi perfil personal</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus accusantium similique repudiandae hic mollitia, alias excepturi, quaerat libero, explicabo odio corporis culpa ullam facilis veritatis eum? Amet aliquid, cumque eligendi!</p>
       <table>
         <caption>
@@ -32,7 +44,7 @@
         <tfoot>
           <tr>
             <!-- porque la etiqueta progress tiene etiqueta de inicio y cierre -->
-            <td>Git</td>
+            <!-- <td>Git</td>
             <td><progress max="100" value="100"></progress></td>
           </tr>
           <tr>
@@ -60,7 +72,6 @@
             <td><progress max="100" value="100"></progress></td>
           </tr>
         </tfoot>
-      </table>
-    </div>
+      </table> -->
   </body>
 </html>
