--- a/index.html
+++ b/index.html
@@ -1,21 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
-    <title>Mi web personal</title>
-    <style>
-      h1, h2{
-        font-family: arial;
-        font-size: 5vw;
-        text-align: center;
-      }
-      h2{
-        font-size: 2vw;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mi web personal - Federico Sosa</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Federico Sosa</h1>
-    <h2>Esta es mi web personal</h2>
+    <header>
+      <nav>
+        <h3>Federico Sosa</h3>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Skills</a>
+        <a href="">Contact</a>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="background-pic">
+      <!-- <img src="computer.jpg" alt="" width="100%;" class="background-info"> -->
+      <div class="profile">
+        <section class="profile-pic">
+          <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
+        </section>
+        <section class="profile-info">
+          <h1>Federico Sosa</h1>
+          <h4>Web Developer</h4>
+          <ul>
+            <li><b>Phone:</b><br>+598 95683920</li>
+            <li><b>Email:</b><br>fdsosa.35@gmail.com</li>
+            <li><b>Date of Birth:</b><br>April 28th, 1999</li>
+          </ul>
+        </section>
+      </div>
+    </section>
+
+      <!--
+      <h2>Bienvenido a mi perfil personal</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus accusantium similique repudiandae hic mollitia, alias excepturi, quaerat libero, explicabo odio corporis culpa ullam facilis veritatis eum? Amet aliquid, cumque eligendi!</p>
+      <table>
+        <caption>
+          <h3>Mis Habilidades</h3>
+        </caption>
+        <thead>
+          <tr>
+            <th>Materia</th>
+            <th>Nivel de Desempeño</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <td>Git</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>HTML</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>JS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>PHP</td>
+            <td><progress max="100" value="90"></progress></td>
+          </tr>
+          <tr>
+            <td>BASE DE DATOS</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+          <tr>
+            <td>INGLES</td>
+            <td><progress max="100" value="100"></progress></td>
+          </tr>
+        </tfoot>
+      </table> -->
+    </div>
   </body>
 </html>
