--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <header>
       <nav>
         <h3>Federico Sosa</h3>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Skills</a>
-        <a href="">Contact</a>
+        <div class="links">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Skills</a>
+          <a href="">Contact</a>
+        </div>
         </ul>
       </nav>
     </header>
 
     <section class="background-pic">
-      <!-- <img src="computer.jpg" alt="" width="100%;" class="background-info"> -->
       <div class="profile">
         <section class="profile-pic">
           <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
@@ -36,18 +37,7 @@
         </section>
       </div>
     </section>
-
-<!--<div class="main">
-      <header>
-        <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
-        <h1>Federico Sosa</h1>
-        <ul class="links">
-          <li><a href="facebook.com" target="_blank">Autobiografía</a></li>
-          <li><a href="https://twitter.com" target="_blank">Información de contacto</a></li>
-        </ul>
-      </header>
-      <h2>Bienvenido a mi perfil personal</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus accusantium similique repudiandae hic mollitia, alias excepturi, quaerat libero, explicabo odio corporis culpa ullam facilis veritatis eum? Amet aliquid, cumque eligendi!</p>
+<!--
       <table>
         <caption>
           <h3>Mis Habilidades</h3>
@@ -89,6 +79,5 @@
           </tr>
         </tfoot>
       </table> -->
-    </div>
   </body>
 </html>
