--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi web personal - Federico Sosa</title>
     <link rel="stylesheet" href="style.css">
+    <!-- ICONS -->
+    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?9ukd8d">
+    <script type="text/javascript" src="function.js"></script>
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav>
         <h3>Federico Sosa</h3>
         <div class="links">
@@ -37,6 +40,25 @@
         </section>
       </div>
     </section>
+
+    <section class="social-bar">
+      <ul>
+        <li>
+          <a href=""><span class="socicon-linkedin"></span></a>
+        </li>
+        <li>
+          <a href=""><span class="socicon-facebook"></span></a>
+        </li>
+        <li>
+          <a href=""><span class="socicon-github"></span></a>
+        </li>
+        <li>
+          <a href=""><span class="socicon-youtube"></span></a>
+        </li>
+      </ul>
+    </section>
+
+
 <!--
       <table>
         <caption>
