Add presentation section

--- a/index.html
+++ b/index.html
@@ -41,25 +41,33 @@
       </div>
     </section>
 
-    <section class="social-bar">
-      <ul>
-        <li>
-          <a href=""><span class="socicon-linkedin"></span></a>
-        </li>
-        <li>
-          <a href=""><span class="socicon-facebook"></span></a>
-        </li>
-        <li>
-          <a href=""><span class="socicon-github"></span></a>
-        </li>
-        <li>
-          <a href=""><span class="socicon-youtube"></span></a>
-        </li>
-      </ul>
+    <section class="presentation">
+      <div class="social-bar">
+        <ul>
+          <li>
+            <a href=""><span class="socicon-linkedin"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="socicon-facebook"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="socicon-github"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="socicon-youtube"></span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="text-present">
+        <h2>Hi I´m Federico</h2>
+        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero cupiditate modi delectus numquam veniam dolorem minus minima illum enim quidem vel, rerum possimus ipsa, harum corporis. Quasi perspiciatis, possimus. Dolorum!</span>
+      </div>
     </section>
 
-
-<!--
+    <section class="skills">
+      <h2>Skills</h2>
+    </section>
+    <!--
       <table>
         <caption>
           <h3>Mis Habilidades</h3>
