Add Contact - Not finished

--- a/index.html
+++ b/index.html
@@ -124,7 +124,15 @@
         </form>
       </div>
       <div class="right">
-
+        <section class="">
+          <h2>Federico Sosa</h1>
+          <h4>Web Developer</h4>
+          <ul>
+            <li><b>Phone:</b><br>+598 95683920</li>
+            <li><b>Email:</b><br>fdsosa.35@gmail.com</li>
+            <li><b>Date of Birth:</b><br>April 28th, 1999</li>
+          </ul>
+        </section>
       </div>
     </section>
   </body>
