Add flexbox to profile section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="links">
           <a href="">Home</a>
           <a href="">Portfolio</a>
-          <a href="#skill">Skills</a>
-          <a href="">Contact</a>
+          <a href="#skillsSection">Skills</a>
+          <a href="#contactSection">Contact</a>
         </div>
         </ul>
       </nav>
@@ -30,13 +30,15 @@
           <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
         </section>
         <section class="profile-info">
-          <h1>Federico Sosa</h1>
-          <h4>Web Developer</h4>
-          <ul>
-            <li><b>Phone:</b><br>+598 95683920</li>
-            <li><b>Email:</b><br>fdsosa.35@gmail.com</li>
-            <li><b>Date of Birth:</b><br>April 28th, 1999</li>
-          </ul>
+          <div class="content-info">
+            <h1>Federico Sosa</h1>
+            <h4>Web Developer</h4>
+            <ul>
+              <li><b>Phone:</b><br>+598 95683920</li>
+              <li><b>Email:</b><br>fdsosa.35@gmail.com</li>
+              <li><b>Date of Birth:</b><br>April 28th, 1999</li>
+            </ul>
+            </div>
         </section>
       </div>
     </section>
@@ -64,7 +66,7 @@
       </div>
     </section>
 
-    <section class="skills" id="skill">
+    <section class="skills" id="skillsSection">
       <h2>Skills</h2>
       <hr class="line_skills">
       <table>
@@ -107,7 +109,7 @@
       </table>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contactSection">
       <h2>Contact Me</h2>
       <hr>
       <div class="left">
