--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <header id="header">
       <nav>
-        <h3>Federico Sosa</h3>
+        <div class="title">
+          <h3>Federico Sosa</h3>
+        </div>
         <div class="links">
           <a href="">Home</a>
           <a href="">Portfolio</a>
