--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
       <div class="right">
         <section class="">
-          <h2>Federico Sosa</h1>
+          <h2>Federico Sos</h1>
           <h4>Web Developer</h4>
           <ul>
             <li><b>Phone:</b><br>+598 95683920</li>
