--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- SKILLS SECTION -->
     <section class="skills" id="skillsSection">
-      <h2>Skills</h2>
+      <h2 class="title-section">Skills</h2>
       <hr class="line_skills">
       <table>
         <thead>
@@ -120,7 +120,7 @@
 
     <!-- CONTACT SECTION -->
     <section class="contact" id="contactSection">
-      <h2>Contact Me</h2>
+      <h2 class="title-section">Contact Me</h2>
       <hr>
       <aside class="row-2">
         <div class="left">
