Doing responsive presentation and skills section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="text-present">
         <h2>Hi I´m Federico</h2>
-        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero cupiditate modi delectus numquam veniam dolorem minus minima illum enim quidem vel, rerum possimus ipsa, harum corporis. Quasi perspiciatis, possimus. Dolorum!</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero cupiditate modi delectus numquam veniam dolorem minus minima illum enim quidem vel, rerum possimus ipsa, harum corporis. Quasi perspiciatis, possimus. Dolorum!</p>
       </div>
     </section>
 
