Doing responsive header and profile section(finished)

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
           <h3>Federico Sosa</h3>
         </div>
         <div class="bars">
-          <i class="fas fa-bars" onclick="displayLinks()"></i>
+          <section class="bg-bar" id="bar">
+            <i class="fas fa-bars" onclick="displayLinks()"></i>
+          </section>
         </div>
         <div class="links">
-          <a href="">Home</a>
+          <a href="#bg">Home</a>
           <a href="">Portfolio</a>
           <a href="#skillsSection">Skills</a>
           <a href="#contactSection">Contact</a>
@@ -35,16 +37,16 @@
         <aside id="links-mob">
           <ul>
             <li>
-              <a href="" onclick="hideLinks()">Home</a>
+              <a href="#bg">Home</a>
             </li>
             <li>
-              <a href="" onclick="hideLinks()">Portfolio</a>
+              <a href="">Portfolio</a>
             </li>
             <li>
-              <a href="#skillsSection" onclick="hideLinks()">Skills</a>
+              <a href="#skillsSection">Skills</a>
             </li>
             <li>
-              <a href="#contactSection" onclick="hideLinks()">Contact</a>
+              <a href="#contactSection">Contact</a>
             </li>
           </ul>
         </aside>
@@ -68,6 +70,23 @@
             </ul>
             </div>
         </section>
+        <!-- SOCIAL BAR MOBILE -->
+        <div class="social-bar social-bar-mobile">
+          <ul>
+            <li>
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-github-alt"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
