feature/details - Solve problems with js code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!-- MENU FOR MOBILE -->
         <div class="menu-mobile">
-          <section class="bg-bar" id="bg-bars">
+          <section class="bg-bar bar-inactive" id="bg-bars">
             <i class="fas fa-bars" id="bars"></i>
           </section>
           <!-- LINKS FOR MOBILE -->
