Added href to the links and a tarjet, created repos.html

--- a/src/index.html
+++ b/src/index.html
@@ -30,20 +30,7 @@
         </section>
         <!-- SOCIAL BAR MOBILE -->
         <div class="social-bar social-bar-mobile">
-          <ul>
-            <li>
-              <a href=""><i class="fab fa-linkedin-in"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fab fa-github-alt"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
+          <include src="social-networks.html"></include>          
         </div>
       </div>
     </section>
@@ -51,20 +38,7 @@
     <!-- PRESENTATION SECTION -->
     <section class="presentation">
       <div class="social-bar">
-        <ul>
-          <li>
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fab fa-github-alt"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
+        <include src="social-networks.html"></include>
       </div>
       <div class="text-present">
         <h2>Hi I´m Federico</h2>
@@ -86,31 +60,45 @@
         <tfoot>
           <tr>
             <td>Git</td>
-            <td class="cell-progress"><progress max="100" value="60"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="60"></progress>
+            </td>
           </tr>
           <tr>
             <td>HTML</td>
-            <td class="cell-progress"><progress max="100" value="80"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="80"></progress>
+            </td>
           </tr>
           <tr>
             <td>CSS</td>
-            <td class="cell-progress"><progress max="100" value="74"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="74"></progress>
+            </td>
           </tr>
           <tr>
             <td>JS</td>
-            <td class="cell-progress"><progress max="100" value="48"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="48"></progress>
+            </td>
           </tr>
           <tr>
             <td>PHP</td>
-            <td class="cell-progress"><progress max="100" value="56"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="56"></progress>
+            </td>
           </tr>
           <tr>
             <td>MySQL</td>
-            <td class="cell-progress"><progress max="100" value="71"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="71"></progress>
+            </td>
           </tr>
           <tr>
             <td>English</td>
-            <td class="cell-progress"><progress max="100" value="80"></progress></td>
+            <td class="cell-progress">
+              <progress class="progress-bar__bar" max="100" value="80"></progress>
+            </td>
           </tr>
         </tfoot>
       </table>
