--- a/src/repos.html
+++ b/src/repos.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <include src="head-metatags"></include>
-    <title>Portfolio - Federico Sosa</title>
+    <title>GitHub Repositories - Federico Sosa</title>
     <include src="head-styles"></include>
     <include src="head-frameworks"></include>
   </head>
@@ -11,9 +11,10 @@
     <!-- HEADER SECTION -->
     <include src="header"></include>
 
-    <!-- CONTACT SECTION -->
+
+    <!-- FOOTER SECTION -->
     <include src="footer"></include>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
-</html>
+</html>    
